[tool.poetry]
name = "big-brother"
version = "0.1.0"
description = ""
authors = ["Jose Mira <josevalterna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pydantic = "^2.7.1"
fastapi = "^0.110.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
